--- a/style/_base.scss
+++ b/style/_base.scss
@@ -114,6 +114,7 @@ $tablet13PortraitBreakPoint: 1050px;
 $tablet11PortraitBreakPoint: 900px;
 $tablet10PortraitBreakPoint: 800px;
 $mobileBreakPoint: 700px;
+$mobileSmallBreakPoint: 375px;
 $drawer-width: 180px !default;
 $drawer-item-width: 160px !default;
 $navbar-height: $row-height-large !default;
