--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -4,6 +4,7 @@
 * {
 	box-sizing: border-box;
 }
+
 body {
 	margin: 0;
 	font-family: $paragraph-font-family;
@@ -153,6 +154,7 @@ body {
 	position: relative;
 
 	&:hover {
+
 		.tooltip-text-up,
 		.tooltip-text-up-left,
 		.tooltip-text-up-right,
@@ -218,7 +220,8 @@ body {
 		::after {
 			content: " ";
 			position: absolute;
-			top: 100%; /* At the bottom of the tooltip */
+			top: 100%;
+			/* At the bottom of the tooltip */
 			left: 50%;
 			margin-left: -5px;
 			border-width: 5px;
@@ -235,7 +238,8 @@ body {
 		&::after {
 			content: " ";
 			position: absolute;
-			bottom: 100%; /* At the top of the tooltip */
+			bottom: 100%;
+			/* At the top of the tooltip */
 			left: 50%;
 			margin-left: -5px;
 			border-width: 5px;
@@ -252,7 +256,8 @@ body {
 			content: " ";
 			position: absolute;
 			top: 50%;
-			right: 100%; /* To the left of the tooltip */
+			right: 100%;
+			/* To the left of the tooltip */
 			margin-top: -5px;
 			border-width: 5px;
 			border-style: solid;
@@ -268,7 +273,8 @@ body {
 			content: " ";
 			position: absolute;
 			top: 50%;
-			left: 100%; /* To the right of the tooltip */
+			left: 100%;
+			/* To the right of the tooltip */
 			margin-top: -5px;
 			border-width: 5px;
 			border-style: solid;
@@ -368,21 +374,22 @@ body {
 		}
 	}
 
-	.switch-input:checked + .switch-label:before {
+	.switch-input:checked+.switch-label:before {
 		background-color: $secondary-color-transparent;
 	}
 
-	.switch-input:checked + .switch-label:after {
+	.switch-input:checked+.switch-label:after {
 		background-color: $secondary-color-normal;
 		-ms-transform: translate(80%, -50%);
 		-webkit-transform: translate(80%, -50%);
 		transform: translate(80%, -50%);
 	}
 
-	.switch-input:checked + .switch-label .switch-on {
+	.switch-input:checked+.switch-label .switch-on {
 		display: inline-block;
 	}
-	.switch-input:checked + .switch-label .switch-off {
+
+	.switch-input:checked+.switch-label .switch-off {
 		display: none;
 	}
 }
@@ -623,7 +630,7 @@ body {
 	padding: 10px 0;
 	border-radius: 10px 10px 0 0;
 
-	& > p {
+	&>p {
 		margin: 5px 0;
 	}
 }
@@ -707,7 +714,7 @@ body {
 			@include nonselectable;
 		}
 
-		& > span {
+		&>span {
 			margin-left: 5px;
 		}
 	}
@@ -832,8 +839,8 @@ body {
 			.vieolo-icon-button {
 				height: $row-height-small;
 				width: $row-height-small;
-			}	
-		}		
+			}
+		}
 	}
 
 	&__canvas-container {
@@ -1402,7 +1409,7 @@ body {
 	display: inline-block;
 
 	&__button-container {
-		
+
 		$this: &;
 
 		&:focus {
@@ -1412,7 +1419,7 @@ body {
 				background-color: $hover-color;
 				border: 2px solid $hover-color;
 			}
-		}		
+		}
 
 		&__default-button {
 			width: 140px;
@@ -1424,14 +1431,14 @@ body {
 			@include card-no-shadow;
 			@include card-selectable;
 			@include ripple-tertiary;
-	
+
 			&__text-container {
 				height: 50px;
 				display: grid;
 				grid-template-rows: 33% 33% 34%;
 			}
 		}
-	}	
+	}
 
 	.vieolo-calendar-statefull-component {
 		position: absolute;
@@ -1670,7 +1677,7 @@ body {
 						border-bottom-left-radius: 0;
 						border-left: none;
 					}
-	
+
 					&__bar-end {
 						border-top-right-radius: 0;
 						border-bottom-right-radius: 0;
@@ -1680,14 +1687,14 @@ body {
 					&__resize {
 						position: absolute;
 						width: 3px;
-						
+
 						height: 100%;
-						cursor: col-resize;											
+						cursor: col-resize;
 
 						&--left {
 							left: -1px;
 							border-radius: inherit;
-							
+
 							&:hover {
 								width: 6px;
 							}
@@ -1696,14 +1703,14 @@ body {
 						&--right {
 							right: -1px;
 							border-radius: inherit;
-							
+
 							&:hover {
 								width: 6px;
 
 							}
 						}
 					}
-				}				
+				}
 
 				&__bar-subtitle {
 					svg {
@@ -1803,6 +1810,7 @@ body {
 
 	&:focus {
 		outline: none;
+
 		input {
 			border: 1px solid $secondary-color-normal;
 		}
@@ -1814,6 +1822,7 @@ body {
 		height: 21px;
 		display: block;
 	}
+
 	input {
 		-webkit-appearance: none;
 		-moz-appearance: none;
@@ -1835,7 +1844,8 @@ body {
 		&:checked {
 			box-shadow: inset 0 0 0 2px $primary-color-normal;
 			transition-delay: 0.2s;
-			& + svg {
+
+			&+svg {
 				--a: 16.1 86.12;
 				--o: 102.22;
 				stroke-dasharray: 16.1 86.12;
@@ -1843,6 +1853,7 @@ body {
 			}
 		}
 	}
+
 	svg {
 		pointer-events: none;
 		fill: none;
@@ -1867,7 +1878,7 @@ body {
 
 	.vieolo-date-picker {
 		&__button-container {
-		
+
 			$this: &;
 
 			&:focus {
@@ -1877,19 +1888,19 @@ body {
 					&__input-container {
 						&__date-picker-button {
 							background-color: $hover-color;
-							border: 2px solid $hover-color;		
+							border: 2px solid $hover-color;
 						}
 					}
 				}
-	
+
 				#{$this}__default-button {
 					background-color: $hover-color;
 					border: 2px solid $hover-color;
 				}
-			}		
+			}
 		}
 	}
-	
+
 	&__label-container {
 		height: 30px;
 		@include flex-row-space-between;
@@ -1983,7 +1994,7 @@ body {
 	display: flex;
 
 	&--horizontal {
-		width: 100%;		
+		width: 100%;
 	}
 
 	&--vertical {
@@ -2012,13 +2023,13 @@ body {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		
+
 		&__text {
 			display: flex;
 			flex-direction: column;
 			justify-content: space-around;
 			height: 100%;
-			
+
 			&__date {
 				display: flex;
 				align-items: flex-end;
@@ -2031,4 +2042,60 @@ body {
 			flex-direction: row-reverse;
 		}
 	}
+}
+
+
+.vieolo-spinner {
+	animation: rotate 2s linear infinite;
+
+	&--extra-small {
+		width: $base-unit-two;
+		height: $base-unit-two;
+	}
+
+	&--small {
+		width: $row-height-small;
+		height: $row-height-small;
+	}
+
+	&--medium {
+		width: $row-height-medium;
+		height: $row-height-medium;
+	}
+
+	&--large {
+		width: $row-height-large;
+		height: $row-height-large;
+	}
+
+	&__path {
+		stroke-linecap: round;
+		animation: dash 1.5s ease-in-out infinite;
+
+		@include colorMixin(stroke, false);
+	}
+
+	@keyframes rotate {
+		100% {
+			transform: rotate(360deg);
+		}
+	}
+
+	@keyframes dash {
+		0% {
+			stroke-dasharray: 1, 150;
+			stroke-dashoffset: 0;
+		}
+
+		50% {
+			stroke-dasharray: 90, 150;
+			stroke-dashoffset: -35;
+		}
+
+		100% {
+			stroke-dasharray: 90, 150;
+			stroke-dashoffset: -124;
+		}
+	}
+
 }
