Added separate height 100vh fill class

--- a/style/_general.scss
+++ b/style/_general.scss
@@ -905,6 +905,10 @@ html {
 
 	&--vh-100 {
 		#{$dim}: 100vh;
+	}
+
+	&--vh-100-fill {
+		#{$dim}: 100vh;
 		
 		@media (pointer: coarse) {
 			#{$dim}: -webkit-fill-available;
@@ -1039,6 +1043,9 @@ html {
 	@include widthAndHeightSizes("width");
 }
 
+.min-height {
+	@include widthAndHeightSizes("min-height")
+}
 
 .max-height {
 	@include widthAndHeightSizes("max-height")
@@ -1048,7 +1055,7 @@ html {
 	@include widthAndHeightSizes("height")
 }
 
-@mixin height--100vh {
+@mixin height--100vh-fill {
 	height: 100vh;
 	
 	@media (pointer: coarse) {
@@ -1058,7 +1065,7 @@ html {
 	}
 }
 
-@mixin max-height--100vh {
+@mixin max-height--100vh-fill {
 	max-height: 100vh;
 	
 	@media (pointer: coarse) {
