Improved the PDF in mobile layout

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -819,9 +819,10 @@ body {
 	background-color: #e4e4e4;
 	width: 100%;
 	text-align: center;
+	position: relative;
 
 	&--full {
-		@include height--100vh;
+		height: 100vh;
 	}
 
 	$self: &;
@@ -845,6 +846,9 @@ body {
 		width: 100%;
 		border: 1px solid $primary-color-normal;
 		@include flex-row-space-between;
+		position: absolute;
+		top: 0;
+		z-index: 2;
 
 		@media (pointer: coarse) {
 			height: $row-height-medium;
@@ -860,9 +864,17 @@ body {
 		overflow: auto;
 		width: 100%;
 		padding: 10px;
+		position: absolute;
+		top: 30px;
+
+		@media (pointer: coarse) {
+			top: 41px;
+		}
 
 		&--full {
-			@include height--100vh;
+			height: 100vh;
+			top: 0;
+			padding-top: 50px;
 			overflow-y: scroll;
 		}
 	}
