--- a/style/_general.scss
+++ b/style/_general.scss
@@ -1078,13 +1078,27 @@ html {
 		&--top-0 {
 			position: sticky;
 			top: 0;
-			z-index: 2;
 		}
 
 		&--bottom-0 {
 			position: sticky;
 			bottom: 0;
 		}
+	}
+}
+
+
+.z-index {
+	&--2 {
+		z-index: 2;
+	}
+
+	&--3 {
+		z-index: 3;
+	}
+
+	&--4 {
+		z-index: 4;
 	}
 }
 
