fixes #158 and fixes #159

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -2175,6 +2175,8 @@ body {
 		bottom: 0px;
 		background-color: white;
 		height: $row-height-medium;
+		z-index: 3;
+		border: solid 0.1px #ddd;		
 	}
 }
 
