--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -672,7 +672,7 @@ body {
 
 		p {
 			padding: 0px 3px;
-		} 
+		}
 
 		svg {
 			height: $base-unit-two;
@@ -984,6 +984,222 @@ body {
 
 			.endOfContent.active {
 				top: 0;
+			}
+		}
+
+		&__annotation-layer {
+			section {
+				position: absolute;
+				text-align: initial;
+			}
+
+			.linkAnnotation>a,
+			.buttonWidgetAnnotation.pushButton>a {
+				position: absolute;
+				font-size: 1em;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+			}
+
+			.buttonWidgetAnnotation.pushButton>canvas {
+				position: relative;
+				top: 0;
+				left: 0;
+				z-index: -1;
+			}
+
+			.linkAnnotation>a:hover,
+			.buttonWidgetAnnotation.pushButton>a:hover {
+				opacity: 0.2;
+				background: rgba(255, 255, 0, 1);
+				box-shadow: 0 2px 10px rgba(255, 255, 0, 1);
+			}
+
+			.textAnnotation img {
+				position: absolute;
+				cursor: pointer;
+			}
+
+			.textWidgetAnnotation input,
+			.textWidgetAnnotation textarea,
+			.choiceWidgetAnnotation select,
+			.buttonWidgetAnnotation.checkBox input,
+			.buttonWidgetAnnotation.radioButton input {
+				background-image: var(--annotation-unfocused-field-background);
+				border: 1px solid transparent;
+				box-sizing: border-box;
+				font-size: 9px;
+				height: 100%;
+				margin: 0;
+				padding: 0 3px;
+				vertical-align: top;
+				width: 100%;
+			}
+
+			.choiceWidgetAnnotation select option {
+				padding: 0;
+			}
+
+			.buttonWidgetAnnotation.radioButton input {
+				border-radius: 50%;
+			}
+
+			.textWidgetAnnotation textarea {
+				font: message-box;
+				font-size: 9px;
+				resize: none;
+			}
+
+			.textWidgetAnnotation input[disabled],
+			.textWidgetAnnotation textarea[disabled],
+			.choiceWidgetAnnotation select[disabled],
+			.buttonWidgetAnnotation.checkBox input[disabled],
+			.buttonWidgetAnnotation.radioButton input[disabled] {
+				background: none;
+				border: 1px solid transparent;
+				cursor: not-allowed;
+			}
+
+			.textWidgetAnnotation input:hover,
+			.textWidgetAnnotation textarea:hover,
+			.choiceWidgetAnnotation select:hover,
+			.buttonWidgetAnnotation.checkBox input:hover,
+			.buttonWidgetAnnotation.radioButton input:hover {
+				border: 1px solid rgba(0, 0, 0, 1);
+			}
+
+			.textWidgetAnnotation input:focus,
+			.textWidgetAnnotation textarea:focus,
+			.choiceWidgetAnnotation select:focus {
+				background: none;
+				border: 1px solid transparent;
+			}
+
+			.textWidgetAnnotation input :focus,
+			.textWidgetAnnotation textarea :focus,
+			.choiceWidgetAnnotation select :focus,
+			.buttonWidgetAnnotation.checkBox :focus,
+			.buttonWidgetAnnotation.radioButton :focus {
+				background-image: none;
+				background-color: transparent;
+				outline: auto;
+			}
+
+			.buttonWidgetAnnotation.checkBox input:checked:before,
+			.buttonWidgetAnnotation.checkBox input:checked:after,
+			.buttonWidgetAnnotation.radioButton input:checked:before {
+				background-color: rgba(0, 0, 0, 1);
+				content: "";
+				display: block;
+				position: absolute;
+			}
+
+			.buttonWidgetAnnotation.checkBox input:checked:before,
+			.buttonWidgetAnnotation.checkBox input:checked:after {
+				height: 80%;
+				left: 45%;
+				width: 1px;
+			}
+
+			.buttonWidgetAnnotation.checkBox input:checked:before {
+				transform: rotate(45deg);
+			}
+
+			.buttonWidgetAnnotation.checkBox input:checked:after {
+				transform: rotate(-45deg);
+			}
+
+			.buttonWidgetAnnotation.radioButton input:checked:before {
+				border-radius: 50%;
+				height: 50%;
+				left: 30%;
+				top: 20%;
+				width: 50%;
+			}
+
+			.textWidgetAnnotation input.comb {
+				font-family: monospace;
+				padding-left: 2px;
+				padding-right: 0;
+			}
+
+			.textWidgetAnnotation input.comb:focus {
+				/*
+				 * Letter spacing is placed on the right side of each character. Hence, the
+				 * letter spacing of the last character may be placed outside the visible
+				 * area, causing horizontal scrolling. We avoid this by extending the width
+				 * when the element has focus and revert this when it loses focus.
+				 */
+				width: 103%;
+			}
+
+			.buttonWidgetAnnotation.checkBox input,
+			.buttonWidgetAnnotation.radioButton input {
+				appearance: none;
+				padding: 0;
+			}
+
+			.popupWrapper {
+				position: absolute;
+				width: 20em;
+			}
+
+			.popup {
+				position: absolute;
+				z-index: 200;
+				max-width: 20em;
+				background-color: rgba(255, 255, 153, 1);
+				box-shadow: 0 2px 5px rgba(136, 136, 136, 1);
+				border-radius: 2px;
+				padding: 6px;
+				margin-left: 5px;
+				cursor: pointer;
+				font: message-box;
+				font-size: 9px;
+				white-space: normal;
+				word-wrap: break-word;
+			}
+
+			.popup>* {
+				font-size: 9px;
+			}
+
+			.popup h1 {
+				display: inline-block;
+			}
+
+			.popupDate {
+				display: inline-block;
+				margin-left: 5px;
+			}
+
+			.popupContent {
+				border-top: 1px solid rgba(51, 51, 51, 1);
+				margin-top: 2px;
+				padding-top: 2px;
+			}
+
+			.richText>* {
+				white-space: pre-wrap;
+			}
+
+			.highlightAnnotation,
+			.underlineAnnotation,
+			.squigglyAnnotation,
+			.strikeoutAnnotation,
+			.freeTextAnnotation,
+			.lineAnnotation svg line,
+			.squareAnnotation svg rect,
+			.circleAnnotation svg ellipse,
+			.polylineAnnotation svg polyline,
+			.polygonAnnotation svg polygon,
+			.caretAnnotation,
+			.inkAnnotation svg polyline,
+			.stampAnnotation,
+			.fileAttachmentAnnotation {
+				cursor: pointer;
 			}
 		}
 	}
@@ -2143,10 +2359,10 @@ body {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		border: solid 0.1px #ddd;		
-		position: relative;	
+		border: solid 0.1px #ddd;
+		position: relative;
 		@include nonselectable;
-		
+
 		&--height-medium {
 			height: $row-height-medium;
 		}
@@ -2154,7 +2370,7 @@ body {
 		&--height-small {
 			height: $row-height-small;
 		}
-		
+
 		&--hover {
 			&:hover {
 				border: solid 0.2px $secondary-color-normal;
@@ -2178,7 +2394,6 @@ body {
 		background-color: white;
 		height: $row-height-medium;
 		z-index: 3;
-		border: solid 0.1px #ddd;		
+		border: solid 0.1px #ddd;
 	}
 }
-
