--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1027,7 +1027,7 @@ body {
 			.choiceWidgetAnnotation select,
 			.buttonWidgetAnnotation.checkBox input,
 			.buttonWidgetAnnotation.radioButton input {
-				background-image: var(--annotation-unfocused-field-background);
+				background-image: url("data:image/svg+xml;charset=UTF-8,<svg width='1px' height='1px' xmlns='http://www.w3.org/2000/svg'><rect width='100%' height='100%' style='fill:rgba(0, 54, 255, 0.13);'/></svg>");
 				border: 1px solid transparent;
 				box-sizing: border-box;
 				font-size: 9px;
