Date Picker fixes #74

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -524,7 +524,7 @@ body {
 		}
 
 		&--medium {
-			height: $row-height-large;
+			height: $row-height-medium;
 		}
 
 		&--small {
@@ -1554,7 +1554,11 @@ body {
 	&__calendar-month,
 	&__calendar-year {
 		@include center-by-flex-row;
-		margin: 3px;
+
+		@media(pointer: coarse) {
+			margin: 3px;
+		}
+
 		p {
 			width: 130px;
 			text-align: center;
@@ -1565,11 +1569,20 @@ body {
 
 .vieolo-calendar-stateless-component {
 	&__calendar-content {
-		width: 270px;
+		width: 210px;
+
+		@media(pointer: coarse) {
+			width: 270px;
+		}
+
 		border-top: 1px solid #f2f2f2;
 
 		&--with-week {
-			width: 300px;
+			width: 240px;
+
+			@media(pointer: coarse) {
+				width: 300px;
+			}
 		}
 	}
 
@@ -1579,12 +1592,19 @@ body {
 		justify-items: center;
 
 		div {
-			width: 30px;
-			height: 30px;
+			width: 20px;
+			height: 20px;
 			border-radius: 50%;
-			font-size: 15px;
+			font-size: 10px;
 			font-weight: 500;
 			color: gray;
+
+			@media(pointer: coarse) {
+				width: 30px;
+				height: 30px;
+				font-size: 15px;
+			}
+
 			@include center-by-flex-row;
 		}
 	}
@@ -1602,7 +1622,11 @@ body {
 	}
 
 	&__row {
-		margin: 5px 0;
+		margin: 3px 0;
+
+		@media(pointer: coarse) {
+			margin: 5px 0;
+		}
 
 		&--no-week {
 			grid-template-columns: repeat(7, 1fr);
@@ -1613,12 +1637,18 @@ body {
 		}
 
 		div {
-			width: 30px;
-			height: 30px;
+			width: 20px;
+			height: 20px;
 			border-radius: 50%;
-			font-size: 15px;
+			font-size: 10px;
 			@include center-by-flex-row;
 			cursor: pointer;
+
+			@media(pointer: coarse) {
+				width: 30px;
+				height: 30px;
+				font-size: 15px;
+			}
 
 			&:hover {
 				background: $hover-color;
@@ -1694,7 +1724,22 @@ body {
 		}
 	}
 
+	&__card-container {
+		width: auto;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+
+		div {
+			display: inline;
+		}
+	}
+
 	.vieolo-calendar-statefull-component {
+		@media(pointer: coarse) {
+			margin-top: 10px;
+		}
+
 		z-index: 11;
 	}
 }
