--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1736,6 +1736,7 @@ body {
 	}
 
 	.vieolo-calendar-statefull-component {
+		position: absolute;
 		@media(pointer: coarse) {
 			margin-top: 10px;
 		}
