added form section fixes #17

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -2465,3 +2465,20 @@ body {
 		@include center-by-flex-row;
 	}
 }
+
+.global-form-section {
+	@include card-no-shadow;
+	border-radius: 5px;	
+	margin: 10px 0;
+
+	.form-section-header {
+		padding: 5px 10px;
+		border-bottom: 1px solid $primary-color-transparent;
+		@include flex-row-space-between;
+	}
+
+	.form-section-content {
+		padding: 5px 10px;
+		flex-direction: column;
+	}
+}
