--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -2482,3 +2482,76 @@ body {
 		flex-direction: column;
 	}
 }
+
+.donut-chart {
+	display: flex;
+	align-items: center;
+
+	.chart-container {
+		position: relative;
+		display: inline-block;
+
+		h2 {
+			text-align: center;
+			position: absolute;
+			line-height: 135px;
+			width: 100%;
+			font-size: 15px;
+		}
+
+		svg {
+			transform: rotate(-90deg);
+		}
+
+		.donut {
+			stroke-dasharray: 440;
+			-webkit-animation: donut 1s ease-out forwards;
+			animation: donut 1s ease-out forwards;
+		}
+	}
+
+	.legend-container {
+		height: 170px;
+		display: flex;
+		flex-flow: column;
+		padding-left: 20px;
+		flex-wrap: wrap;
+
+		.legend-item {
+			display: flex;
+			width: 80px;
+			margin-top: 2px;
+			align-items: center;
+			cursor: pointer;
+
+			div:nth-child(1) {
+				height: 10px;
+				width: 10px;
+				border-radius: 50%;
+				margin-right: 5px;
+			}
+
+			div:nth-child(2) {
+				width: 65px;
+				p {
+					@include no-text-overflow;
+					margin: 0;
+				}
+
+				.title {
+					font-size: 12px;
+				}
+
+				.subtitle {
+					font-size: 10px;
+					@include font-light;
+				}
+			}
+		}
+
+		.legend-item:nth-child(odd) {
+			background-color: #f2f2f2;
+			border-radius: 3px;
+		}
+	}
+}
