--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -2466,28 +2466,25 @@ body {
 	}
 }
 
-.global-form-section {
-	@include card-no-shadow;
-	border-radius: 5px;	
-	margin: 10px 0;
+.vieolo-form-section {
 
-	.form-section-header {
-		padding: 5px 10px;
+	&__header-container {
+		padding: $base-unit-half $base-unit;
 		border-bottom: 1px solid $primary-color-transparent;
 		@include flex-row-space-between;
 	}
 
-	.form-section-content {
-		padding: 5px 10px;
+	&__content-container {
+		padding: $base-unit-half $base-unit;
 		flex-direction: column;
 	}
 }
 
-.donut-chart {
+.vieolo-donut-chart {
 	display: flex;
 	align-items: center;
 
-	.chart-container {
+	&__chart-container {
 		position: relative;
 		display: inline-block;
 
@@ -2503,32 +2500,33 @@ body {
 			transform: rotate(-90deg);
 		}
 
-		.donut {
+		&__donut {
 			stroke-dasharray: 440;
 			-webkit-animation: donut 1s ease-out forwards;
 			animation: donut 1s ease-out forwards;
+			@include colorMixin(stroke, false);
 		}
 	}
 
-	.legend-container {
+	&__legend-container {
 		height: 170px;
 		display: flex;
 		flex-flow: column;
-		padding-left: 20px;
+		padding-left: $base-unit-two;
 		flex-wrap: wrap;
 
-		.legend-item {
+		&__legend-item {
 			display: flex;
 			width: 80px;
-			margin-top: 2px;
+			margin-top: $base-unit-half;
 			align-items: center;
 			cursor: pointer;
 
 			div:nth-child(1) {
-				height: 10px;
-				width: 10px;
+				height: $base-unit;
+				width: $base-unit;
 				border-radius: 50%;
-				margin-right: 5px;
+				margin-right: $base-unit-half;
 			}
 
 			div:nth-child(2) {
@@ -2549,9 +2547,9 @@ body {
 			}
 		}
 
-		.legend-item:nth-child(odd) {
+		&__legend-item:nth-child(odd) {
 			background-color: #f2f2f2;
-			border-radius: 3px;
+			border-radius: $base-unit-half;
 		}
 	}
 }
