Added Sub Navbar row

--- a/style/_base.scss
+++ b/style/_base.scss
@@ -118,6 +118,7 @@ $mobileSmallBreakPoint: 375px;
 $drawer-width: 240px !default;
 $drawer-item-width: 220px !default;
 $navbar-height: $row-height-large !default;
+$subnavbar-height: $row-height-medium !default;
 
 
 // Fonts
