Added Vieolo Page

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -2648,3 +2648,11 @@ body {
 	height: $subnavbar-height;
 	background-color: $content-background-color;
 }
+
+
+.vieolo-page {
+	
+	&__content {	
+		padding: $base-unit;
+	}
+}
