Added wrap to `Flex`

--- a/style/_general.scss
+++ b/style/_general.scss
@@ -2054,6 +2054,20 @@ html {
 		}
 	}	
 
+	&--wrap {
+		&--wrap {
+			flex-wrap: wrap;
+		}
+
+		&--nowrap {
+			flex-wrap: nowrap;
+		}
+
+		&--wrap-reverse {
+			flex-wrap: wrap-reverse;
+		}		
+	}
+
 }
 
 
